--- a/Homeworks/Random samples.qmd
+++ b/Homeworks/Random samples.qmd
@@ -81,7 +81,7 @@ simul <- function(n)
 ```
 
 ```{r}
-j <- simul(100)
+y_t <- simul(100)
 curve(2/3*(x+1), 0, 1, add = TRUE, col = "blue")
 
 ```
@@ -119,9 +119,91 @@ sim_ar <- function(n,m) {
 ```
 
 ```{r}
-y <- sim_ar(100,4/3)
+y_ar <- sim_ar(100,4/3)
 
-hist(y,prob=T)
+hist(y_ar,prob=T)
 curve((x + 1)/2,0,1,add=T, col = "blue")
 ```
 
+#### Mean
+:::: {.columns}
+::: {.column width="50%"}
+##### Analitic
+$$
+E(y) = \left( \int_0^1 y \cdot \frac{2}{3}(y+1) \, dy \right)
+$$
+
+$$
+E(y) = \frac{2}{3}\left( \int_0^1 y^2 \, dy + \int_0^1 y \, dy \right)
+$$
+
+$$
+E(y) = \frac{2}{3} \left( \frac{1}{3} + \frac{1}{2} \right) = 0.5555
+$$
+:::
+
+::: {.column width="24%"}
+##### Simulated
+```{r}
+mean(y_t)
+```
+:::
+
+::: {.column width="2%"}
+:::
+
+::: {.column width="24%"}
+##### Simulated
+```{r}
+mean(y_ar)
+```
+:::
+
+::::
+
+#### Variance
+:::: {.columns}
+::: {.column width="47.5%"}
+##### Analitic
+$$
+\text{Var}(Y) = E(Y^2) - [E(Y)]^2
+$$
+```{r}
+# Define f(y)
+f <- function(y) (2/3) * (y + 1)
+
+# Expected value E(Y)
+E_Y <- integrate(function(y) y * f(y), 0, 1)$value
+
+# Expected value E(Y^2)
+E_Y2 <- integrate(function(y) y^2 * f(y), 0, 1)$value
+
+# Variance
+variance_Y <- E_Y2 - E_Y^2
+variance_Y
+
+```
+
+:::
+
+::: {.column width="3%"}
+:::
+
+::: {.column width="23.75%"}
+##### Simulated
+```{r}
+var(y_t)
+```
+:::
+
+::: {.column width="2%"}
+:::
+
+::: {.column width="23.75%"}
+##### Simulated
+```{r}
+var(y_ar)
+```
+:::
+
+::::
