--- a/Homeworks/Homework4.qmd
+++ b/Homeworks/Homework4.qmd
@@ -16,7 +16,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r}
+```{r, include=FALSE}
 library(readODS)
 library(dplyr)
 library(kableExtra)
@@ -117,20 +117,151 @@ kbl(dt) |>
   add_header_above(c(" " = 1, "X = 0" = 2, "X = 1" = 2, "X = 2" = 2))
 ```
 
+### Marginal distribution X
+$$
+P(X=0) = P(0)= \sum_{y=0}^{2}\sum_{z=0}^{2}p(x,y,z)
+$$
+
+$$
+P(X=0) = P(0)= \frac{2}{27} + \frac{1}{27} + \frac{5}{27} + \frac{1}{27} = \frac{9}{27}
+$$
+
+$$
+P(X=1) = P(1)= \sum_{y=0}^{2}\sum_{z=0}^{2}p(x,y,z)
+$$
+
+$$
+P(X=1) = P(1)= \frac{1}{27} + \frac{5}{27} + \frac{1}{27} + \frac{2}{27} = \frac{9}{27}
+$$
+
+$$
+P(X=2) = P(2)= \sum_{y=0}^{2}\sum_{z=0}^{2}p(x,y,z)
+$$
+
+$$
+P(X=2) = P(2)= \frac{3}{27} + \frac{3}{27} + \frac{1}{27} + \frac{2}{27} = \frac{9}{27}
+$$
+
 ```{r}
-# Valores de X e as probabilidades marginais associadas
-valores_X <- c(1, 2, 3, 4)  # Substitua pelos valores de X da sua tabela
-probabilidades_X <- c(0.1, 0.2, 0.4, 0.3)  # Substitua pelas probabilidades marginais de X
+x <- 0:3
+fx <- c(0, 0.333, 0.333, 0.333)
 
-# Calculando a função de distribuição acumulada (FDA)
-FDA_X <- cumsum(probabilidades_X)
+Fx <- cumsum(fx)
+n <- length(x)
 
-# Criando um gráfico da FDA
-plot(valores_X, FDA_X, type = "s", col = "#4682B4", 
-     xlab = "Valores de X", ylab = "P(X)", 
-     main = "Função de Distribuição Acumulada de X")
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "X",
+     ylab = "F(X)",
+     main = "Cumulative distribution function")
 
-# Adicionando uma linha para indicar o comportamento acumulativo
-lines(valores_X, FDA_X, type = "s", col = "#4682B4", lwd = 2)
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+
+### Conditional distribution (Y|X)
+
+$$
+P(Y|X) = \frac{P(Y=y,X=x)}{P(X=x)}=\frac{P(y,x)}{P(x)}
+$$
+
+##### For $P(Y|X=0)$
+
+$$P(Y=0|X=0) = \frac{3/27}{9/27} = \frac{1}{3}$$
+
+$$P(Y=1|X=0) = \frac{6/27}{9/27} = \frac{2}{3}$$
+
+
+
+##### For $P(Y|X=1)$
+
+$$P(Y=0|X=1) = \frac{6/27}{9/27} = \frac{2}{3}$$
+
+$$P(Y=1|X=1) = \frac{3/27}{9/27} = \frac{1}{3}$$
+
+
+##### For $P(Y|X=2)$
+
+$$P(Y=0|X=2) = \frac{6/27}{9/27} = \frac{2}{3}$$
+
+$$P(Y=1|X=2) = \frac{3/27}{9/27} = \frac{1}{3}$$
+
+:::: {.columns}
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 0.333, 0.666)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Y",
+     ylab = "F(Y | X = 0)",
+     main = "Conditional Cumulative Distribution of Y given X=0")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 0.666, 0.333)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Y",
+     ylab = "F(Y | X = 1)",
+     main = "Conditional Cumulative Distribution of Y given X=1")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::::
+
+:::: {.columns}
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 0.666, 0.333)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Y",
+     ylab = "F(Y | X = 2)",
+     main = "Conditional Cumulative Distribution of Y given X=2")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::::
+### Conditional distribution (Z|X,Y)
+
+### Simulation
+```{r}
+
 ```
 
