--- a/Homeworks/Homework4.qmd
+++ b/Homeworks/Homework4.qmd
@@ -143,7 +143,7 @@ P(X=2) = P(2)= \frac{3}{27} + \frac{3}{27} + \frac{1}{27} + \frac{2}{27} = \frac
 $$
 
 ```{r}
-x <- 0:3
+x <- 0:3 # X = {0,1,2} ; x <- 0:3 just to adjust the plot
 fx <- c(0, 0.333, 0.333, 0.333)
 
 Fx <- cumsum(fx)
@@ -161,6 +161,43 @@ points(x = x[-1], y = Fx[-1], pch=1)
 for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
 ```
 
+### Marginal distribution Y
+$$
+P(Y=0) = P(0)= \sum_{y=0}^{2}\sum_{z=0}^{2}p(y,x,z)
+$$
+
+$$
+P(Y=0) = P(0)= \frac{2}{27} + \frac{1}{27} + \frac{1}{27} + \frac{5}{27} + \frac{3}{27} + \frac{3}{27} = \frac{15}{27}
+$$
+
+$$
+P(Y=1) = P(1)= \sum_{y=0}^{2}\sum_{z=0}^{2}p(y,x,z)
+$$
+
+$$
+P(Y=1) = P(1)= \frac{5}{27} + \frac{1}{27} + \frac{1}{27} + \frac{2}{27} + \frac{1}{27} + \frac{2}{27} = \frac{12}{27}
+$$
+
+
+```{r}
+y <- 0:2
+fy <- c(0, 15/27, 12/27)
+
+Fy <- cumsum(fy)
+n <- length(y)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(y)), 
+     ylim = c(0, 1),
+     xlab = "Y",
+     ylab = "F(Y)",
+     main = "Cumulative distribution function")
+
+points(x = y[-n], y = Fy[-1], pch=19)
+points(x = y[-1], y = Fy[-1], pch=1)
+for(i in 1:(n-1)) points(x=y[i+0:1], y=Fy[c(i,i)+1], type="l")
+```
+
 ### Conditional distribution (Y|X)
 
 $$
@@ -169,24 +206,24 @@ $$
 
 ##### For $P(Y|X=0)$
 
-$$P(Y=0|X=0) = \frac{3/27}{9/27} = \frac{1}{3}$$
+$$P(Y=0|X=0) = \frac{3/27}{9/27} = \frac{3}{9}$$
 
-$$P(Y=1|X=0) = \frac{6/27}{9/27} = \frac{2}{3}$$
+$$P(Y=1|X=0) = \frac{6/27}{9/27} = \frac{6}{9}$$
 
 
 
 ##### For $P(Y|X=1)$
 
-$$P(Y=0|X=1) = \frac{6/27}{9/27} = \frac{2}{3}$$
+$$P(Y=0|X=1) = \frac{6/27}{9/27} = \frac{6}{9}$$
 
-$$P(Y=1|X=1) = \frac{3/27}{9/27} = \frac{1}{3}$$
+$$P(Y=1|X=1) = \frac{3/27}{9/27} = \frac{3}{9}$$
 
 
 ##### For $P(Y|X=2)$
 
-$$P(Y=0|X=2) = \frac{6/27}{9/27} = \frac{2}{3}$$
+$$P(Y=0|X=2) = \frac{6/27}{9/27} = \frac{6}{9}$$
 
-$$P(Y=1|X=2) = \frac{3/27}{9/27} = \frac{1}{3}$$
+$$P(Y=1|X=2) = \frac{3/27}{9/27} = \frac{3}{9}$$
 
 :::: {.columns}
 
@@ -259,18 +296,293 @@ for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
 
 ::::
 
+
 ### Conditional distribution (Z|X,Y)
 
 $$
 P(Z|X,Y)) = \frac{P(Z=z,X=x,Y=y)}{P(X=x,Y=y)} =\frac{P(z,x,y)}{P(x,y)}
 $$
 
-$$
+##### For $P(Z|X=0,Y=0)$
 
-$$
+$$P(Z=0|X=0,Y=0) = \frac{2/27}{3/27} = \frac{2}{3}$$
+
+$$P(Z=1|X=0,Y=0) = \frac{1/27}{3/27} = \frac{1}{3}$$
+
+##### For $P(Z|X=0,Y=1)$
+
+$$P(Z=0|X=0,Y=1) = \frac{5/27}{6/27} = \frac{5}{6}$$
+
+$$P(Z=1|X=0,Y=1) = \frac{1/27}{6/27} = \frac{1}{6}$$
+
+##### For $P(Z|X=1,Y=0)$
+
+$$P(Z=0|X=1,Y=0) = \frac{1/27}{6/27} = \frac{1}{6}$$
+
+$$P(Z=1|X=1,Y=0) = \frac{5/27}{6/27} = \frac{5}{6}$$
+
+##### For $P(Z|X=1,Y=1)$
+
+$$P(Z=0|X=1,Y=1) = \frac{1/27}{3/27} = \frac{1}{3}$$
+
+$$P(Z=1|X=1,Y=1) = \frac{2/27}{3/27} = \frac{2}{3}$$
+
+##### For $P(Z|X=2,Y=0)$
+
+$$P(Z=0|X=2,Y=0) = \frac{3/27}{6/27} = \frac{3}{6}$$
+
+$$P(Z=1|X=2,Y=0) = \frac{3/27}{6/27} = \frac{3}{6}$$
+
+##### For $P(Z|X=2,Y=1)$
+
+$$P(Z=0|X=2,Y=1) = \frac{1/27}{3/27} = \frac{1}{3}$$
+
+$$P(Z=1|X=2,Y=1) = \frac{2/27}{3/27} = \frac{2}{3}$$
+
+:::: {.columns}
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 2/3, 1/3)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Z",
+     ylab = "F(Z | X = 0; Y = 0)",
+     main = "Conditional Cumulative Distribution of Z given (X=0,Y=0)")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 5/6, 1/6.)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Z",
+     ylab = "F(Z | X = 0; Y = 1)",
+     main = "Conditional Cumulative Distribution of Z given (X=0,Y=1)")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::::
+
+:::: {.columns}
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 1/6, 5/6)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Z",
+     ylab = "F(Z | X = 1; Y = 0)",
+     main = "Conditional Cumulative Distribution of Z given (X=1,Y=0)")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 1/3, 2/3)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Z",
+     ylab = "F(Z | X = 1; Y =1)",
+     main = "Conditional Cumulative Distribution of Z given (X=1,Y=1)")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::::
+
+:::: {.columns}
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 3/6, 3/6)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Z",
+     ylab = "F(Z | X = 2; Y = 0)",
+     main = "Conditional Cumulative Distribution of Z given (X=2,Y=0)")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::: {.column width="49%"}
+```{r, echo=FALSE}
+x <- 0:2
+fx <- c(0, 1/3, 2/3)
+
+Fx <- cumsum(fx)
+n <- length(x)
+
+plot(x = NA, y = NA, pch = NA, 
+     xlim = c(0, max(x)), 
+     ylim = c(0, 1),
+     xlab = "Z",
+     ylab = "F(Z | X = 2; Y = 1)",
+     main = "Conditional Cumulative Distribution of Z given (X=2,Y=1)")
+
+points(x = x[-n], y = Fx[-1], pch=19)
+points(x = x[-1], y = Fx[-1], pch=1)
+for(i in 1:(n-1)) points(x=x[i+0:1], y=Fx[c(i,i)+1], type="l")
+```
+:::
+
+::::
 
 ### Simulation
+
+**Algorithm:**
+
+1. Generate X with a distribution F(X).
+
+2. Generate Y conditioned on X, that is, with distribution F(Y|X).
+
+3. Generate Z conditioned on X and Y, that is, with distribution F(Z|X,Y).
+
 ```{r}
+set.seed(123) # Set a seed for reproducibility
+uniform_values <- runif(3)
+print(uniform_values) # Check generated uniform values
+
+# Generate X
+x <- ifelse(uniform_values[1] <= 9/27, 0,
+             ifelse(uniform_values[1] <= 18/27, 1, 2))
+
+# Generate Y based on X
+if (x == 0) {
+  y <- ifelse(uniform_values[2] <= 3/9, 0, 1)
+} else if (x == 1) {
+  y <- ifelse(uniform_values[2] <= 6/9, 0, 1)
+} else {
+  y <- ifelse(uniform_values[2] <= 6/9, 0, 1)
+}
+
+# Generate Z based on X and Y
+if (x == 0 && y == 0) {
+  z <- ifelse(uniform_values[3] <= 2/3, 0, 1)
+} else if (x == 0 && y == 1) {
+  z <- ifelse(uniform_values[3] <= 5/6, 0, 1)
+} else if (x == 1 && y == 0) {
+  z <- ifelse(uniform_values[3] <= 1/6, 0, 1)
+} else if (x == 1 && y == 1) {
+  z <- ifelse(uniform_values[3] <= 1/3, 0, 1)
+} else if (x == 2 && y == 0) {
+  z <- ifelse(uniform_values[3] <= 3/6, 0, 1)
+} else {
+  z <- ifelse(uniform_values[3] <= 1/3, 0, 1)
+}
+
+x ; y ; z
 
 ```
 
+### Generating 1000 sets of (X,Y,Z)
+```{r}
+generate_xyz <- function(n) {
+  
+  results <- matrix(ncol = 3, nrow = n)
+  
+  for (i in 1:n) {
+  
+  uniform_values <- runif(3)
+  
+  x <- ifelse(uniform_values[1] <= 9/27, 0,
+             ifelse(uniform_values[1] <= 18/27, 1, 2))
+  
+  if (x == 0) {
+    y <- ifelse(uniform_values[2] <= 3/9, 0, 1)
+    } else if (x == 1) {
+      y <- ifelse(uniform_values[2] <= 6/9, 0, 1)
+      } else {
+        y <- ifelse(uniform_values[2] <= 6/9, 0, 1)
+        }
+  
+  if (x == 0 && y == 0) {
+    z <- ifelse(uniform_values[3] <= 2/3, 0, 1)
+    } else if (x == 0 && y == 1) {
+      z <- ifelse(uniform_values[3] <= 5/6, 0, 1)
+      } else if (x == 1 && y == 0) {
+        z <- ifelse(uniform_values[3] <= 1/6, 0, 1)
+        } else if (x == 1 && y == 1) {
+          z <- ifelse(uniform_values[3] <= 1/3, 0, 1)
+          } else if (x == 2 && y == 0) {
+            z <- ifelse(uniform_values[3] <= 3/6, 0, 1)
+            } else {
+              z <- ifelse(uniform_values[3] <= 1/3, 0, 1)
+              }
+  
+  results[i, ] <- c(x, y, z)
+  
+  }
+  
+  results_df <- as.data.frame(results)
+  colnames(results_df) <- c("X", "Y", "Z")
+  
+  return(results_df)
+
+}
+```
+
+```{r}
+
+sim_xyz <- generate_xyz(1000)
+
+kbl(sim_xyz[1:3], row.names = TRUE) %>%
+  kable_paper() %>%
+  scroll_box(width = "300px", height = "300px")
+
+```
+
+```{r}
+table(sim_xyz$X, sim_xyz$Y, sim_xyz$Z)/1000
+```
+
+**Conclusion:** The generated values approximate the true probability distribution.
