--- a/Homeworks/Homework5.qmd
+++ b/Homeworks/Homework5.qmd
@@ -199,62 +199,39 @@ axis(1, at = seq(5, 55, by = 5), labels = seq(5, 55, by = 5))
 
 ## Question 6
 
-```{r}
-corr<-rbind(c(   1,  .8, -.03),
-            c(  .8,   1,  .04),
-            c( -.03, .04,   1))
-
-variances <- c(1, 16, 1)
-
-# Criando a matriz de covariância
-sigma <- diag(sqrt(variances)) %*% corr %*% diag(sqrt(variances))
-
-# Exibindo a matriz de covariância
-sigma
-```
 
 ```{r}
-gera.mult.chol <- function(v.medias, sigma, iteracoes) {
-  mu <- v.medias 
-  fc <- chol(sigma[1:2, 1:2]) 
-  iter <- iteracoes
-  p <- length(fc[1, ]) 
-  variaveis <- matrix(NA, iter, 3)
-
-  for (i in 1:iter) {
-    
-    x <- 3 * runif(1)^2
-    
-    y <- rnorm(1)
-    
-    z <- sample(1:4, size = 1, replace = TRUE, prob = c(0.1, 0.2, 0.3, 0.4))
-    
-    # Standardize X and Y
-    x_std <- x - mu[1]
-    y_std <- y - mu[2]
-    
-    transformed <- c(x_std, y_std) %*% t(fc)
-    
-    variaveis[i, ] <- c(transformed, z) + c(mu[1:2], 0)
-  }
-  
+gera.mult.chol<-function(v.medias, sigma, iteracoes)
+  {
+  mu<-v.medias
+  fc<-chol(sigma) #matriz da cholesky
+  iter<-iteracoes
+  p<-length(fc[1,])
+  variaveis<-matrix(99,iter,p)
+  for (i in 1:iter)
+    {
+    #gerar o vetor z a partir da distribuicao desejada, de dimencao px1
+    z<-rnorm(p) #usando aqui a distribuicao normal(0,1)
+    #obter o vetor multivariado, de dimensao px1, fazendo
+    variaveis[i,]<-mu+t(fc)%*%z #mu eh um vetor de medias px1
+    }
   return(variaveis)
-}
+  }
 ```
 
 Define the parameters:
 ```{r}
-# Define the parameters
 u <- c(1.5, 10, 2.5) # Adjusted means for X, Y, and Z
-sigma <- matrix(c(1, 0.5, -0.03,
-                  0.5, 16, 0.05,
-                 -0.03, 0.05, 1), ncol = 3) # Covariance matrix
+sigma <- matrix(c(10, 2, 0.3,
+                  2, 16, -0.5,
+                 0.3, -0.5, 1), ncol = 3) # Covariance matrix
 ```
 
 
 ```{r}
 set.seed(123)
 j <- gera.mult.chol(v.medias = u, sigma = sigma, iteracoes = 1000)
+cov(j)
 ```
 
 :::: {.columns}
@@ -279,20 +256,58 @@ cov(j)
 ::::
 
 ```{r}
-plot(density(j[,1]))
-hist(j[,1],prob=T,add=T)
-boxplot(j[,1])
+# usar o método da transformação inversa
+u1<-pnorm(j[,1])
+plot(j[,1],pnorm(j[,1]))
+u2<-pnorm(j[,2])
 
-#fazendo o hist para a variável 3
-max_density <- 1 / (sqrt(2 * pi * sigma[3, 3]))
-hist(j[,3],prob=T, ylim = c(0, max_density * 1.2))
-curve(dnorm(x,mean = 2.5, sd =sqrt(sigma[3,3])),add=T, col = "blue")
+plot(j[,2],pnorm(j[,2]))
+u3<-pnorm(j[,3])
+plot(j[,3],pnorm(j[,3]))
+# obter a matriz de v.a. uniformemente distribuidas
+u<-cbind(u1,u2,u3)
+head(u)
+summary(u)
+boxplot(u)
+pairs.panels(u)
+```
 
-# melhor visualização
-library(psych)
-summary(j)
-var(j)
-cor(j,method='pearson')
-pairs.panels(j)
+```{r}
+#supor as novas variaveis de interesse. Fazer x = F^-1(u)
+#exponencial
+x1<-qexp(u1)
+hist(x1,prob=T)
+curve(dexp(x),0,20,add=T,col="blue")
+#normal
+x2<-qnorm(u2,10,4)
+hist(x2,prob=T)
+curve(dnorm(x,4,2),-6,15,add=T,col="blue")
+#t  
+# x3<-qt(u3, df = 5)
+# hist(x3,prob=T)
+# curve(dt(x,5),-5, 5,add=T,col="blue")
+x3<-ifelse(u3<1/3,2,4) #supondo uma v.a.d onde x=2 com prob 1/3 e x=4 com prob 2/3
+plot(table(x3)/length(x3))
+# x3 <- sqrt(u3)
+```
+
+```{r}
+breaks <- quantile(j[, 3], probs = c(0, 0.1, 0.3, 0.6, 1)) 
+
+# Transformar os valores contínuos em categorias 1, 2, 3, 4
+j[, 3] <- cut(j[, 3], breaks = breaks, labels = 1:4, include.lowest = TRUE)
+
+# Converter para valores numéricos
+j[, 3] <- as.numeric(j[, 3])
+```
+
+```{r}
+j[, 1] <- pnorm(j[,1])
+
+# Aplicar a inversa da CDF para ajustar à distribuição X ~ 3x^2
+j[, 1] <- j[, 1]^(1/3)
+
+# Ajustar os valores para o intervalo (0, 3)
+j[, 1] <- j[, 1] * 3
 ```
 
